fixing palette colors flowing out of screen bug

--- a/core/includes/customizer/controls/palette/palette.css
+++ b/core/includes/customizer/controls/palette/palette.css
@@ -15,8 +15,8 @@
 .palette__wrapper.color_scheme {
     position: absolute;
     top: -22px;
-    left: 0;
-    transform: translateX(0px) translateY(110px) translateY(0px) scale(1) translateZ(0px);
+    left: 50%;
+    transform: translateX(-50%) translateY(110px) scale(1) translateZ(0px);
     overflow: auto;
     z-index: 9999;
     background-color: #FFF;
@@ -24,8 +24,13 @@
     border: 1px solid #D0D0D0;
     border-radius: 4px;
     height: 400px;
+    /* Hide scrollbar for Webkit browsers */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
 }
-
+.palette__wrapper.color_scheme::-webkit-scrollbar {
+    display: none;
+}
 .palette__wrapper .palette__choice .label {
     font-family: "Roboto", sans-serif;
     font-size: 14px;
@@ -195,5 +200,6 @@
 }
 .responsive-selected-palette-all-colors .responsive-selected-palette-editor .responsive-selected-palette-pickers {
     display : flex; 
-    gap : 5px;
+    gap : 10px;
+    justify-content: center;
 }
